Fix Offscreen Nav Bar on Mobile

--- a/css/main.css
+++ b/css/main.css
@@ -301,12 +301,11 @@ nav{
 }
 
 nav > .nav-item{
-  height: 80px;
   width: 80px;
   padding: 0.5em;
 
   display: flex;
-  flex-shrink: 0;
+  flex-shrink: 1;
 
   background-color: var(--transparent);
   border: none;
